fix flags and collapse button

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -106,3 +106,6 @@ button {
   height: 40px;
   width: 80px;
 }
+.collapse-btn{
+  display: inline;
+}
